--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "Matthew Andres <mandre361@west-mec.edu> (https://github.com/MatthewAndresWestMec)",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1"
   }
 }
