--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "Matthew Andres <mandre361@west-mec.edu> (https://github.com/MatthewAndresWestMec)",
+  "contributors": 
+  [
+    {
+      "name":"Dakota Adams", 
+      "email":"dadams572@west-mec.org",
+      "url":"https://github.com/dakotarobot213"
+    }
+  ],
   "license": "MIT",
   "dependencies": {
     "axios": "^1.5.1",
@@ -16,7 +24,6 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
-    "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
